Pass message parameters as hash

--- a/lib/pheromone/templates/resque_job.rb.example
+++ b/lib/pheromone/templates/resque_job.rb.example
@@ -1,7 +1,12 @@
 # class ResqueJob
 #   @queue = :low
 #
-#   def self.perform(message)
-#     message.send!
+#   def self.perform(topic:, message:, metadata: {}, options: {})
+#     Pheromone::Messaging::Message.new(
+#        topic: topic,
+#        message: message,
+#        metadata: metadata,
+#        options: options
+#      ).send!
 #   end
 # end
