--- a/lib/pheromone/templates/sidekiq_job.rb.example
+++ b/lib/pheromone/templates/sidekiq_job.rb.example
@@ -1,6 +1,11 @@
 # class SidekiqJob
 #   include Sidekiq::Worker
-#   def perform(message)
-#     message.send!
+#   def perform(topic:, message:, metadata: {}, options: {})
+#     Pheromone::Messaging::Message.new(
+#        topic: topic,
+#        message: message,
+#        metadata: metadata,
+#        options: options
+#      ).send!
 #   end
 # end
