--- a/lib/pheromone/templates/resque_job.rb.example
+++ b/lib/pheromone/templates/resque_job.rb.example
@@ -1,12 +1,12 @@
 # class ResqueJob
 #   @queue = :low
 #
-#   def self.perform(topic:, message:, metadata: {}, options: {})
+#   def self.perform(message_object)
 #     Pheromone::Messaging::Message.new(
-#        topic: topic,
-#        message: message,
-#        metadata: metadata,
-#        options: options
+#        topic: message_object[:topic],
+#        message: message_object[:message],
+#        metadata: message_object[:metadata],
+#        options: message_object[:options]
 #      ).send!
 #   end
 # end
