--- a/lib/pheromone/templates/sidekiq_job.rb.example
+++ b/lib/pheromone/templates/sidekiq_job.rb.example
@@ -1,11 +1,11 @@
 # class SidekiqJob
 #   include Sidekiq::Worker
-#   def perform(topic:, message:, metadata: {}, options: {})
+#   def perform(message_object)
 #     Pheromone::Messaging::Message.new(
-#        topic: topic,
-#        message: message,
-#        metadata: metadata,
-#        options: options
+#        topic: message_object[:topic],
+#        message: message_object[:message],
+#        metadata: message_object[:metadata],
+#        options: message_object[:options]
 #      ).send!
 #   end
 # end
